kubernetes/overlays/infrastructure/infra/applications/fakefish/network-policies/allow-metal3.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-metal3
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: fakefish
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kustomize.toolkit.fluxcd.io/name: metal3
      ports:
      - protocol: TCP
        port: 9000
